# journal_ocr

./: .env.example  .gitignore  .linear.toml  AGENTS.md  PLAN.md  README.md  docker-compose.yml  launch.sh  launch_app.sh  main.py  package-lock.json  pyproject.toml  run.sh  test.ipynb  test_run.sh  transcribe.py
.beads/: issues.jsonl
_docs/: AGENT_LOOP.md  ASYNC_API_MIGRATION.md  INTEGRATED_STARTUP.md  LLM_CALLS.md  RECOMMENDATIONS.md  REFERENCED_DOCS_METADATA.md  data-schemas.md  design.md  query_journal_flow.md
backend/: launch.sh  pyproject.toml  run.sh  test_run.sh
backend/scripts/: add_transcription_frontmatter.py  export_tags.py
backend/src/: flows.py  ingest.py  lancedb_client.py  scratch.py
backend/src/backend/: __init__.py  api.py  completions.py  embedding_pipeline.py  flows.py  lancedb_client.py  models.py  personalities.py  scratch.py  transcription_pipeline.py
backend/src/backend/baml_src/: completions.baml
backend/src/core/: __init__.py  ingest.py  lancedb_client.py  llm.py  log_config.py  models.py  navigation.py  settings.py
backend/src/core/baml_src/: completions.baml
backend/src/pipeline/: __init__.py  embedding_pipeline.py  ingestion_ops.py  ingestion_pipeline.py  transcription.py  transcription_pipeline.py
backend/tests/: test_completions.py  test_ingestion_ops.py  test_navigation.py  test_personalities.py
etl/: completions.py  es_client.py  loader.py
scripts/: export_elastic.py
src/: api.py  completions.py  embedding_pipeline.py  es_client.py  flows.py  ingest.py  lancedb_client.py  loader.py  main.py  models.py  navigation.py  retrievers.py  scratch.py  transcribe.py  transcription_pipeline.py
src/baml_src/: defs.baml
tests/: test_navigation.py  test_transcribe.py
ui/: SETUP.md  api-server.js  install.sh  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.jsx  App.tsx  types.tsx
(+16 files in other folders)
